<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/abstract_background_white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_height="wrap_content"
        android:text="@string/players"

        android:gravity="center_vertical|center_horizontal"
        android:layout_width="fill_parent" />
    <ListView
        android:id="@+id/ListView01"
    android:alwaysDrawnWithCache="true"
    android:dividerHeight="1dp"
    android:horizontalSpacing="3dp"
    android:scrollingCache="true"
    android:smoothScrollbar="true"
    android:stretchMode="columnWidth"
    android:verticalSpacing="3dp"
        android:layout_height="200dp"
        android:layout_width="fill_parent"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/playerName"/>-->
            <EditText
                android:id="@+id/etPlayerName"
                android:hint="@string/playerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/playerTeam"/>-->


            <EditText
                android:id="@+id/etPlayerTeam"
                android:layout_width="wrap_content"
                android:hint="@string/playerTeam"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/addBtn"
        android:text="@string/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GameTime"
        android:layout_gravity="bottom"/>
    <Spinner
        android:id="@+id/time_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NumberOfWords"
        android:layout_gravity="bottom"/>
    <Spinner
        android:id="@+id/quantity_of_words"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"/>

    <!--<ScrollView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->
        <!--<CheckBox-->
            <!--android:id="@+id/professionCh"-->
            <!--android:text="Professions"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content" />-->
        <!--<CheckBox-->
            <!--android:id="@+id/animalsCh"-->
            <!--android:text="Animals"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content" />-->
        <!--<CheckBox-->
            <!--android:id="@+id/hobbiesCh"-->
            <!--android:text="Hobbies"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content" />-->

    <!--</ScrollView>-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/typeWords"/>
    <croco.com.croco.utils.MultiSelectionSpinner
        android:id="@+id/input1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp" />
    <Button
        android:id="@+id/start"
        android:text="@string/startBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"/>

</LinearLayout>
    </ScrollView>