<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/abstract_background_white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayoutCompat">
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:orientation="vertical">
        <TextView
            android:id="@+id/playerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:text="TextView"/>
        <TextView
            android:id="@+id/playerScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:text="TextView"/>

            <Button
                android:id="@+id/buttonShowCustomDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Show Custom Dialog" />
        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>

    <TextView

        android:id="@+id/chronometer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="380dp"
        android:gravity="center"
        android:layout_marginTop="36dp"/>

    <TextView
        android:id="@+id/word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="TextView"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="300dp"
        android:textAlignment="center"
        android:textSize="35dp"
        android:textStyle="bold"
        android:background="@drawable/text_border"/>

    <Button
        android:id="@+id/showWordBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="135dp"
        android:background="@drawable/button_bg_round"
        android:gravity="center_vertical"
        android:text="@string/showWord"
        android:textAlignment="center" />
    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutWordGuessedNextPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nextPlayerBtn"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="90dp"
        android:gravity="center">


    <Button
        android:id="@+id/nextWordBtn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:text="@string/nextWord"/>
        <Button
            android:id="@+id/wordGuessedBtn"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/wordGuessed"/>
    </android.support.v7.widget.LinearLayoutCompat>
    <Button
        android:id="@+id/startGameBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:text="@string/startGameBtn"
        android:textAlignment="center" />
    <Button
        android:id="@+id/nextPlayerBtn"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="45dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nextPlayer"
        android:layout_above="@+id/startGameBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>